# Devora-Main-Bot

./: CMakeLists.txt  README.md  bot.cpp  bot.h  config.cpp  config.h  levelsystem.db3  main.cpp  roles  roles.cpp  roles.h
